@@ -1,3 +1,6 @@
+lblEBookFiles = EBook file types
+lblMovieFiles = Movies file types
+lblMusicFiles = Music file types
 lblImageSizeConversion = Image Size Conversion
 lblConvertImagesSizes = Convert Image Sizes
 lblMaximumImageResolution = Maximum image resolution
@@ -590,7 +593,7 @@ lblIcon = Icon
 lblIcons = Icons
 lblYes = Yes
 lblNo = No
-lblPicFileFilter = Images
+lblPicFileFilter = Image file types
 lblBckFileFilter = Data Crow backup file
 lblRemoveTrack = Remove Track
 lblAddChild = Add %1
